--- a/templates/home.html
+++ b/templates/home.html
@@ -69,17 +69,18 @@
           <div class="form-group">
             <label for="preferences">Preferences</label>
             <div class="form-check">
-              <input type="radio" name="preferences[]" id="nature" class="form-check-input" value="nature">
-              <label for="nature" class="form-check-label">Nature</label>
+                <input type="radio" name="preferences" id="nature" class="form-check-input" value="nature">
+                <label for="nature" class="form-check-label">Nature</label>
             </div>
             <div class="form-check">
-              <input type="radio" name="preferences[]" id="culture" class="form-check-input" value="culture">
-              <label for="culture" class="form-check-label">Culture</label>
+                <input type="radio" name="preferences" id="culture" class="form-check-input" value="culture">
+                <label for="culture" class="form-check-label">Culture</label>
             </div>
             <div class="form-check">
-              <input type="radio" name="preferences[]" id="gastronomy" class="form-check-input" value="gastronomy">
-              <label for="gastronomy" class="form-check-label">Gastronomy</label>
+                <input type="radio" name="preferences" id="gastronomy" class="form-check-input" value="gastronomy">
+                <label for="gastronomy" class="form-check-label">Gastronomy</label>
             </div>
+        </div>
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
