render result in template

--- a/templates/home.html
+++ b/templates/home.html
@@ -91,8 +91,7 @@
   <!-- New container for the right side -->
   <div class="container-right">
     <h2>Results</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor.</p>
-    <p>Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi.</p>
+    <p>{{result}}</p>
   </div>
 </body>
 </html>
